# ipe

./: .gitignore  CLAUDE.md  README.md  SPECIFICATION.md  pyproject.toml  roadmap.md
.claude/: architecture_template.md  claude_md_template.md  features_template.md  mcp.json  product_dna_template.md  settings.json  tasks_template.md
.claude/agents/: architect.md  devops-engineer.md  feature-engineer.md  product-strategist.md  python-engineer.md  task-manager.md  typescript-engineer.md
.claude/commands/: conventional-commit.md  generate-claude-md.md  jira.md  memorize.md  pr.md  refine-memory.md
.claude/skills/code-quality/: SKILL.md
.claude/skills/openapi-spec/: SKILL.md
.claude/skills/write-tests/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yaml  claude-code-review.yml
specs/: 01-project-overview.md  02-architecture.md  03-cli-interface.md  04-configuration-system.md  05-code-generation.md  06-openapi-support.md  99-future-features.md  README.md
src/ipe/: __init__.py
src/ipe/cli/: __init__.py  console.py  main.py
src/ipe/core/: __init__.py  analyzer.py  config.py  exceptions.py  formatter.py  generator.py  renderer.py
src/ipe/models/: __init__.py  blueprint.py  standard.py
src/ipe/parsers/: __init__.py  fetcher.py  models.py  openapi.py  resolver.py
src/ipe/targets/: __init__.py  base.py  registry.py
src/ipe/targets/python/: auth.py  filters.py  formatters.py  naming.py  target.py
src/ipe/targets/python/templates/: __init__.py.jinja  auth.py.jinja  client.py.jinja  exceptions.py.jinja  transport.py.jinja
src/ipe/targets/python/templates/models/: __init__.py.jinja  {name}.py.jinja
src/ipe/targets/python/templates/resources/: __init__.py.jinja  {name}.py.jinja
src/ipe/utils/: grouping.py  naming.py
tests/: __init__.py  conftest.py  test_version.py
tests/cli/: test_console.py  test_generate.py  test_init.py  test_main.py
tests/core/: test_analyzer.py  test_config.py  test_exceptions.py  test_generator.py  test_renderer.py
tests/fixtures/: circular_ref.yaml  florada-v3.0.yaml  florada.yaml  invalid.yaml  swagger2.yaml
tests/fixtures/expected/florada/python/: __init__.py  auth.py  client.py  exceptions.py  transport.py
tests/fixtures/expected/florada/python/models/: __init__.py  address.py  attach_payment_method_request.py  billing_interval.py  boleto_details.py  cancel_subscription_request.py  capture_charge_request.py  card_details.py  charge.py  charge_list.py  charge_status.py  create_charge_request.py  create_customer_request.py  create_plan_request.py  create_refund_request.py  create_subscription_request.py  create_webhook_request.py  customer.py  customer_list.py  dispute.py  dispute_evidence.py  dispute_reason.py  dispute_status.py  error.py  field_error.py  money.py  pagination_meta.py  patch_customer_request.py  payment_method.py  pix_details.py  plan.py  refund.py  subscription.py  subscription_status.py  update_customer_request.py  validation_error_response.py  webhook_endpoint.py
tests/fixtures/expected/petstore/: __init__.py  client.py  exceptions.py
tests/fixtures/expected/petstore/models/: __init__.py  error.py  pet.py
tests/fixtures/expected/petstore/resources/: __init__.py  pets.py
tests/models/: test_blueprint.py  test_standard.py
tests/parsers/: test_fetcher.py  test_models.py  test_openapi.py  test_resolver.py
tests/targets/: test_registry.py
tests/targets/python/: test_auth.py  test_filters.py  test_formatters.py  test_generation.py  test_naming.py  test_target.py
tests/utils/: test_grouping.py  test_naming.py
(+15 files in other folders)
